# PlutoGE

./: CMakeLists.txt  CMakePresets.json  imgui.ini
editor/: CMakeLists.txt
editor/src/: main.cpp
editor/ui/: CMakeLists.txt
editor/ui/include/PlutoGE/ui/: EditorProfiler.h  EditorShell.h  PanelManager.h
editor/ui/include/PlutoGE/ui/panels/: InspectorPanel.h  Panel.h  ProfilerPanel.h  SceneHierarchyPanel.h  ViewportPanel.h
editor/ui/src/: EditorProfiler.cpp  EditorShell.cpp  PanelManager.cpp
editor/ui/src/panels/: InspectorPanel.cpp  Panel.cpp  ProfilerPanel.cpp  SceneHierarchyPanel.cpp  ViewportPanel.cpp
engine/: CMakeLists.txt
engine/assets/: CMakeLists.txt
engine/assets/include/PlutoGE/assets/: AssetManager.h  Project.h
engine/assets/src/: AssetManager.cpp  Project.cpp
engine/core/: CMakeLists.txt
engine/core/include/PlutoGE/core/: Engine.h
engine/core/src/: Engine.cpp
engine/import/: CMakeLists.txt
engine/import/include/PlutoGE/import/: MeshImporter.h
engine/import/src/: MeshImporter.cpp
engine/platform/: CMakeLists.txt
engine/platform/include/PlutoGE/platform/: InputState.h  Window.h
engine/platform/src/: Window.cpp
engine/render/: CMakeLists.txt
engine/render/include/PlutoGE/render/: Camera.h  GBuffer.h  Graphics.h  Material.h  Mesh.h  RenderGraph.h  RenderTarget.h  Renderer.h  Shader.h  Texture.h  TextureManager.h
engine/render/include/PlutoGE/render/passes/: GeometryPass.h  IRenderPass.h  LightPropagationVolumePass.h  LightingPass.h  PostProcessPass.h  SSAOPass.h  ShadowPass.h
engine/render/include/PlutoGE/render/postprocess/: ColorGradingEffect.h  FXAAEffect.h  GammaCorrectionEffect.h  IPostProcessEffect.h  LPVEffect.h  LSAOEffect.h  PostProcessEffectFactory.h  RSMEffect.h  SSAOEffect.h  SSGIEffect.h  SceneCompositeEffect.h  ShaderPostProcessEffect.h  ToneMappingEffect.h  VolumetricFogEffect.h
engine/render/src/: GBuffer.cpp  Graphics.cpp  Material.cpp  RenderTarget.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  TextureManager.cpp
engine/render/src/passes/: GeometryPass.cpp  LightPropagationVolumePass.cpp  LightingPass.cpp  PostProcessPass.cpp  SSAOPass.cpp  ShadowPass.cpp
engine/render/src/postprocess/: ColorGradingEffect.cpp  FXAAEffect.cpp  GammaCorrectionEffect.cpp  PostProcessEffectFactory.cpp  RSMEffect.cpp  SSAOEffect.cpp  SSGIEffect.cpp  SceneCompositeEffect.cpp  ShaderPostProcessEffect.cpp  ToneMappingEffect.cpp  VolumetricFogEffect.cpp
engine/scene/: CMakeLists.txt
engine/scene/include/PlutoGE/scene/: Entity.h  Scene.h  SceneBaker.h  SceneSerializer.h
engine/scene/include/PlutoGE/scene/components/: CameraComponent.h  Component.h  LightComponent.h  MeshComponent.h  ScriptComponent.h
engine/scene/src/: Entity.cpp  Scene.cpp  SceneBaker.cpp  SceneSerializer.cpp
engine/scene/src/components/: CameraComponent.cpp  LightComponent.cpp  MeshComponent.cpp  ScriptComponent.cpp
engine/scripting/: CMakeLists.txt  README.md
engine/scripting/include/PlutoGE/scripting/: HostFxrScriptRuntime.h  ScriptEngine.h  ScriptRuntime.h  ScriptTypes.h
engine/scripting/managed/PlutoGE.ScriptCore/: PlutoGE.ScriptCore.csproj  PlutoGE.ScriptCore.csproj.lscache  ScriptBehaviour.cs  SerializedFieldAttribute.cs
engine/scripting/managed/PlutoGE.ScriptCore/Examples/: Rotator.cs  RotatorScript.cs
engine/scripting/managed/PlutoGE.ScriptCore/Native/: ScriptBridge.cs
engine/scripting/src/: HostFxrScriptRuntime.cpp  ScriptEngine.cpp
runtime/: CMakeLists.txt
runtime/src/: main.cpp
